<resources>
    <string name="app_name">CC2CoronoTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_contacts">Hello from Contacts</string>
    <string name="title_qr_read">Hey, here a QR code should be read.</string>
    <string name="title_qr_create">Let other people scan your personal QR Code to establish a contact.</string>
    <string name="LinkContacts">Contacts</string>
    <string name="LinkReadQR">Scan QR</string>
    <string name="LinkCreateQR">Show QR</string>
    <string name="loading_generic">Loading…</string>
    <string name="detailsExposureDescription">Your history with this contact</string>
    <string name="avatarDescription">Avatar</string>
    <string name="contact_not_connected">This UUID is not connected to a phone contact yet!</string>
    <string name="contact_bind_to_button">Pick a contact!</string>
    <string name="description_no_exposures">There have been no exposures to this contact yet.</string>
    <string name="contact_avatar_desc">Contact Avatar</string>
    <string name="contact_favorite_desc">Favorite Contact?</string>
    <string name="contact_description_none">You have not tracked any contacts with this person yet.</string>
    <string name="contact_description_some">You had %1$d contacts with this person.</string>
    <string name="no_contacts_yet">"You do not have any contacts yet. "</string>
    <string name="add_or_import_contact">Add or import contact(s)</string>
    <string name="add_contact">Add contact</string>
    <string name="import_contacts">Import contacts from phone</string>
    <string name="retry">Retry</string>
    <string name="import_contact_failed">Importing phone contacts failed.</string>
    <string name="import_single">Import single contact</string>
    <string name="no_permission_no_import">Without the Read Contacts permission you won\'t be able to import contacts.</string>
    <string name="import_single_contact">Import a contact from your phone.</string>
    <string name="contact_import_success">Contact imported successfully.</string>
    <string name="contacts_how_to">Press the button in the bottom right corner to create or import new contacts.</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_contact_success">Contact deleted successfully</string>
    <string name="delete_contact_failure">Failed to delete the contact.</string>
    <string name="confirm_contact_deletion">Are you sure you want to delete %s?</string>
    <string name="confirm_contact_deletion_title">Are you sure?</string>
    <string name="contacts">Contacts</string>
    <string name="qr_image_personal">Your personal QR-Code</string>
    <string name="qr_generation_failed">Your personal QR code could not be created.</string>
    <string name="preferences_category_general_information">General Information</string>
    <string name="preferences_category_maps_integration">Maps integration</string>
    <string name="personal_uuid">Personal UUID</string>
    <string name="preferences_allow_tracking">Allow location tracking</string>
    <string name="preferences_track_exposures">Track contact locations</string>
    <string name="preferences_allow_tracking_summary">If true other people may track your location when scanning your QR code.</string>
    <string name="preferences_track_exposures_summary">If contact tracking is enabled this option enables tracking of contacts when you scan a QR code.</string>
    <string name="preferences">Preferences</string>
    <string name="scan_qr_description">Scan a QR code</string>
    <string name="preparing_qr">Preparing your QR Code…</string>
    <string name="qr_scan_failed">Whoops! This QR code appears to be invalid.\nReason: %s</string>
    <string name="unknown_intent">This intent is unfortunately not supported by the app yet!</string>
    <string name="pick_contact">Select a contact</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select">Select</string>
    <string name="pick_contacts">Select contacts</string>
    <string name="upsert_contact_failed">Failed to update contact \'%s\'.</string>
    <string name="on_boarding_topic_title1">Title1</string>
    <string name="on_boarding_topic_title2">Title2</string>
    <string name="on_boarding_topic_title3">Title3</string>
    <string name="on_boarding_topic_description1">Description1</string>
    <string name="on_boarding_topic_description2">Description2</string>
    <string name="on_boarding_topic_description3">Description3</string>
    <string name="insert_exposure_failed">Whoops! We failed to insert a new exposure.</string>
    <string name="exposure_description">%s</string>
    <string name="action_search">Search</string>
    <string name="display_name">Displayname</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="confirm_generic">Confirm</string>
    <string name="create_contact">New contact</string>
    <string name="confirm_create_contact">Create new Contact</string>
    <string name="display_name_cannnot_be_blank">The display name must not be blank.</string>
    <string name="create_contact_failed">Failed to create new contact.</string>
    <string name="persist_uri_failed">Sorry, your phone didn\'t want you to pick this image. Try again?</string>
    <string name="LinkMaps">Maps</string>
    <string name="location_not_available">Unfortunately location data does not seem to be available right now.</string>
    <string name="no_permission_no_location">The app needs location permissions to work correctly.</string>
    <string name="preferences_allow_tracking_key" translatable="false">allow_tracking</string>
    <string name="preferences_track_exposures_key" translatable="false">track_exposures</string>
    <string name="enable_location">Location unavailable</string>
    <string name="enable_location_reason">This feature requires location information.\nPlease activate location services in your settings.</string>
    <string name="open_settings">Open settings</string>
    <string name="allow_location_or_preferences">Please enable location services or change your preferences to disable location tracking to add the exposure.</string>
    <string name="maps_title_exposures">Display Exposures</string>
    <string name="maps_exposures_description">Select</string>
    <string name="map_configuration_title">Display settings</string>
    <string name="map_configuration_current_display_num">Currently displaying %d contacts.</string>
    <string name="map_view_title">Location </string>
    <string name="certificate_holder">Certificate holder</string>
    <string name="certificate_title">Certificates</string>
    <string name="certificate_qr_desc">Certificate QR</string>
    <string name="certificate_holder_name">Name</string>
    <string name="certificate_dob">Date of birth</string>
    <string name="certificate_issued_at">Issued at</string>
    <string name="certificate_vaccination">Vaccination</string>
    <string name="certificate_disease">Disease</string>
    <string name="certificate_dose">Dose %1$s/%2$s</string>
    <string name="cert_prophylaxis">Active substance</string>
    <string name="cert_dose_date">Date</string>
    <string name="cert_dose_brand">Brand</string>
    <string name="cert_dose_MAH">MAH</string>
    <string name="cert_dose_provider">Administered in</string>
    <string name="cert_expires_at">Expires at</string>
    <string name="cert_test_group">Test certificate</string>
    <string name="cert_test_type">Test type</string>
    <string name="cert_test_name">Test name</string>
    <string name="cert_test_device">Test device</string>
    <string name="cert_test_sample_date">Sample date</string>
    <string name="cert_test_result">Result</string>
    <string name="cert_test_center">Facility</string>
    <string name="cert_test_issued_by">Issued by</string>
    <string name="cert_recovery_group">Recovery certificate</string>
    <string name="cert_recovery_first_positive_date">First tested positive</string>
    <string name="cert_recovery_issuer">Issuer</string>
    <string name="cert_recovery_provider">Provided by</string>
    <string name="cert_recovery_valid_from">Valid From</string>
    <string name="cert_recovery_valid_until">Valid until</string>
    <string name="incidence_api_unavailable">Incidence data is currently unavailable.</string>
    <string name="map_location">Location</string>
    <string name="map_county">County</string>
    <string name="map_state">State</string>
    <string name="map_7_day_incidence">7day incidence</string>
    <string name="map_own_location">Your Location</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_contacts">Number of exposures</string>
    <string name="always">All time</string>
    <string name="this_week">One week</string>
    <string name="this_month">One month</string>
    <string name="statistics_general">General statistics</string>
    <string name="statistics_highest_encounter">Highest exposure</string>
    <string name="statistics_by_contact">Highest exposures by contact</string>
    <string name="statistics_total_exposures">#Exposures total</string>
    <string name="statistics_total_with_coordinates">#Exposures with location</string>
    <string name="maps_goto_own_location">Jump to your current location</string>
    <string name="no_location_available">Unfortunately location data is currently not available.</string>
    <string name="app_icon_desc">App Icon</string>
    <string name="LinkCalendar">Calendar</string>
    <string name="Lobby">Lobby</string>
    <string name="insert_certificate_failed">Oops. Failed to store your certificate.</string>
    <string name="insert_certificate_failed_already_exists">The certificate already is stored on your device.</string>
    <string name="goto_certificate_on_exists">Show</string>
    <string name="goto_certificate_failed">Oops, something went wrong navigating to your certificate.</string>
    <string name="certificates">Certificates</string>
    <string name="no_certificates_yet">You did not store any certificates on this device yet.</string>
    <string name="cert_holder">Certificate holder</string>
    <string name="cert_issued_at">Issued at</string>
    <string name="lobby_icon">Lobby Icon</string>
    <string name="lobby_welcome">Many people around?</string>
    <string name="lobby_decsription">By joining the lobby you automatically check in when other people around you are detected.\nDon\'t worry, we do not share your personal information. Other people only see your personal UUID!</string>
    <string name="lobby_checked_in">Checked in</string>
    <string name="lobby_checked_out">Swipe to check in</string>
    <string name="lobby_no_contacts">You did not encounter anyone yet.</string>
    <string name="lobby_exposure_start">Contact started</string>
    <string name="lobby_exposure_end">Contact ended</string>
    <string name="ongoing_exposure_title">You are currently engaged with %s</string>
    <string name="exposure_fetch_failed">Failed to fetch the corresponding exposure.</string>
    <string name="fetch_contact_failed">Failed to fetch corresponding contact data.</string>
    <string name="OngoingExposure">Ongoing exposure</string>
    <string name="update_exposure_failed">Failed to update exposure.</string>
    <string name="exposure_update_success">Your exposure was recorded successfuly.</string>
    <string name="ongoing_exposure_svc_desc_short">Click to check out.</string>
    <string name="ongoing_exposure_svc_desc_long">You are currently engaged with another person. This engagement started at %s.\nTo checkout simply click this notification.</string>
    <string name="ongoing_exposure_svc_title_short">Currently checked-in</string>
    <string name="ongoing_exposure_svc_title_long">Currently checked-in</string>
    <string name="exposure_update_already_done">This exposure is already finalized.</string>
</resources>