<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preferences_category_general_information">

        <Preference
            android:id="@+id/prfUUID"
            android:clickable="false"
            android:enabled="false"
            app:enabled="false"
            app:key="uuid"
            app:summary="Your personal UUID generated when the app was first started."
            app:title="@string/personal_uuid" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_maps_integration">
        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_tracking"
            android:title="@string/preferences_allow_tracking"
            android:summary="@string/preferences_allow_tracking_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="track_exposures"
            android:title="@string/preferences_track_exposures"
            android:dependency="allow_tracking"
            android:summary="@string/preferences_track_exposures_summary"/>
    </PreferenceCategory>

</PreferenceScreen>