<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_vertical"
    android:orientation="vertical"
    tools:context=".ui.views.StartScreenFragment">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="413dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:text="This screen does NOT follow the MVVM architecture as it wis guaranteed to be changed."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGotoContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LinkContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <Button
        android:id="@+id/btnGotoReadQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LinkReadQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGotoContacts" />

    <Button
        android:id="@+id/btnGotoCreateQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LinkCreateQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGotoReadQR" />

    <Button
        android:id="@+id/btnGotoMaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LinkMaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGotoCreateQR" />

</androidx.constraintlayout.widget.ConstraintLayout>