<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="de.uni.cc2coronotracker.data.viewmodel.LobbyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        tools:context=".ui.views.LobbyFragment">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/lobby_icon"
            android:src="@drawable/ic_meeting_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLobbyWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lobby_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/txtLobbyDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lobby_decsription"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLobbyWelcome" />

        <com.stfalcon.swipeablebutton.SwipeableButton
            android:id="@+id/swpBtnCheckInOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:durationAnimation="250"
            app:isClickToSwipeEnable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLobbyDescription"
            app:textChecked="@string/lobby_checked_in"
            app:textColorChecked="@color/positiveButtonColor"
            app:textColorUnChecked="@color/secondaryTextColor"
            app:textSize="11sp"
            app:textUnchecked="@string/lobby_checked_out"
            app:thresholdEnd="0.3"
            app:thresholdStart="0.7">

        </com.stfalcon.swipeablebutton.SwipeableButton>

        <LinearLayout
            android:id="@+id/cntLobbyContacts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swpBtnCheckInOut"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/lobby_no_contacts"
                android:src="@drawable/ic_baseline_gpp_good_24"
                app:tint="@color/secondaryTextColor" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lobby_no_contacts"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lobbyExposures"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>