<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="contactVM"
            type="de.uni.cc2coronotracker.data.viewmodel.shared.ContactCreationDialogViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLoDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/avatarDescription"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_no_avatar_128"
            app:tint="@color/secondaryTextColor" />

        <Button
            android:id="@+id/btnSelectFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_gallery"
            android:text="@string/select_from_gallery" />
    </LinearLayout>
</layout>